<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- 全局 -->
    <string name="about_app">关于 TEAMKN</string>
    <string name="app_name">teamkn</string>
    <string name="app_version">0.50</string>
    <string name="app_version_full">android客户端 0.52 pre</string>
    <string name="app_version_title_update_msg">TEAMKN现在有新版本是否现在更新？</string>
    <string name="app_version_title_expired_msg">你的TEAMKN版本过低必须更新才能使用</string>
    
    <string name="now_loading">正在载入…</string>
    <string name="now_sending">正在发送…</string>
    <string name="now_creating">正在创建…</string>
    <string name="now_deleting">正在删除…</string>
    <string name="now_updating">正在修改…</string>
    <string name="now_syning">正在同步数据…</string>
    <string name="now_search">正在搜索…</string>

    <string name="app_method_not_define_exception">功能方法未定义</string>
    <string name="app_intent_connection_exception">网络连接错误</string>
    <string name="app_authenticate_exception">用户身份验证错误</string>
    <string name="app_unknown_exception">服务端数据读取错误</string>

    <string name="app_data_syn_fail">数据同步失败</string>

    <string name="button_go_back">返回</string>
    <string name="placeholder">占位</string>
    <string name="placeholder_long">占位占位占位占位占位占位占位占位占位占位占位占位占位占位</string>
    <string name="placeholder_time">45分钟前</string>
    <string name="image_description">图片描述</string>
    
    
    <string name="contact_list_linkman">联系人</string>
    <string name="contact_list_send_invite">发出的邀请</string>
    <string name="contact_list_get_invite">接收</string>
    
    <string name="search_friendly">查找朋友</string>
    
    <string name="delete_success">删除成功</string>
    <string name="success_add_watch">成功加入书签 ^_^</string>
    <string name="success_remove_watch">移除书签成功 ^_^</string>
    
    <string name="up">上一步</string>
    <string name="next">下一步</string>
    
    <string name="tknlist_kind_all_list">所有</string>
    <string name="tknlist_kind_step_list">步骤列表</string>
    <string name="tknlist_kind_collection_list">收集列表</string>
    <!-- product  二维码结果 -->
    <string name="product_title">标题：</string>
    <string name="product_name">名称：</string>
    <string name="product_kind">型号：</string>
    <string name="product_unit">单位：</string>
    <string name="product_origin">产地：</string>
    <string name="product_vendor">制造商：</string>
    <!-- 二维码 -->
    <string name="tkn_qrcode_but">扫描二维码/条形码</string>
    <string name="tkn_now_scanning">正在扫描.....</string>
    <!-- SEARCH -->
    <string name="search_title">搜索</string>
    <string name="search_list">搜索列表</string>
    <string name="search_user">搜索用户</string>
    <string name="search_no_data">没有搜索到数据</string>
    <!-- BASE_REGISTER -->
    <string name="base_register_email">Email</string>
    <string name="base_register_name">用户名</string>
    <string name="base_register_password">密码</string>
    <string name="base_register_affirm_password">确认密码</string>
    <string name="base_register_register">创建账号</string>
    <string name="base_register_error_msg">账户创建失败，原因如下 :</string>
    <string name="base_register_error_intent">. 网络无法连接</string>
    <string name="base_register_error_email_repeat">. 这个邮箱已经注册过了</string>
    <string name="base_register_error_email_no">. 没有填写邮箱</string>
    <string name="base_register_error_name_no">. 没有填写用户名</string>
    <string name="base_register_error_password_no">. 没有填写密码</string>
    <string name="base_register_error_affirm_password_no">. 没有填写确认密码</string>
    <!-- BASE_SOCIAL_CIRCLE -->
    <string name="base_social_circle_mi_msg">我的信息</string>
    <string name="base_social_circle_mi_follow">我的FOLLOW</string>
    <string name="base_social_circle_mi_fan">我的粉丝</string>
    <!-- DATA_ITEM -->
    <string name="tkndata_item_accept_onther_update">接受其余修改</string>
    <string name="tkndata_item_skip_onther_update">跳过其余修改</string>
    <string name="tkndata_item_list_contrast">列表对比</string>
    <string name="tkndata_item_list_status">列表状态</string>
    <string name="tkndata_item_list_opposite_list">对方的</string>
    <string name="tkndata_item_list_mi_list">我的</string>
    <string name="tkndata_item_accord_term_update">手动逐项处理</string>
    <string name="tkndata_item_title_hint">列表浏览-名称</string>
    <string name="tkndata_item_update_offer_list">修改建议游览</string>
    <string name="tkndata_item_look_list">查看列表</string>
    <string name="tkndata_item_list_no_data">列表没有数据</string>
    <!-- DATA_ITEM_CREATE -->
    <string name="tkndata_item_create_head_title">新建列表</string>
    <string name="tkndata_item_create_title">子项标题</string>
    <string name="tkndata_item_create_content">内容 ：</string>
    <string name="tkndata_item_create_list_name_repead">列表名称已存在</string>
    <!-- 列表集合的列表项 -->
    <string name="tknlist_private">私有</string>
    <string name="tknlist_fork">被签有改</string>
    <string name="tknlist_by_fork">自签出</string>
    <string name="tknlist_fav">收藏</string>
    <string name="tknlist_kind_step">步骤</string>
    <string name="tknlist_kind_collection">收集</string>
    <!-- DATA_LIST_EDIT_TITLE -->
    <string name="tkndata_list_edit_title_hint">修改标题的内容在此</string>
    <string name="tkndata_list_edit_title_share">分享给所有人</string>
    <!-- DATA_LIST_CREATE -->
    <string name="tkndata_list_create_title">创建列表</string>
    <string name="tkndata_list_create_step_list">步骤列表</string>
    <string name="tkndata_list_create_collection_list">收集列表</string>
    <string name="tkndata_list_create_share">分享给所有人</string>
    <string name="tkndata_list_create_title_hint">列表名称已存在</string>
    <!-- SETTING -->
    <string name="setting_head_title">设置</string>
    <string name="setting_account_manager">账号管理</string>
    <string name="setting_about_softerware">关于软件</string>
    <string name="setting_account_manager_add_account">增加账号</string>
    <!-- USER_MSG -->
    <string name="user_msg_title">个人信息</string>
    <string name="user_msg_sex">性别  ：</string>
    <string name="user_msg_like">爱好  ：</string>
    <string name="user_msg_more_msg">更多信息</string>
    <string name="user_msg_attention">关注</string>
    <string name="user_msg_fan">粉丝</string>
    <!-- VERSION_CHECK_DIALOG -->
    <string name="version_check_dialog_title_msg">应用更新提示</string>
    <string name="version_check_dialog_new_version">最新版本：</string>
    <string name="version_check_dialog_new_function">新增功能：</string>
    <string name="version_check_dialog_new_apk_big">安装包大小：</string>
    <string name="version_check_dialog_download">下载安装</string>
    <string name="version_check_dialog_cancel">以后再说</string>
    <string name="version_check_dialog_title">TITLE</string>

    <!-- SOCIAL_CIRCLE -->
    <string name="social_circle_head_title">社交圈子</string>
    <!-- MAIN -->
    <string name="headbar_title">TEAMKN</string>
    <string name="main_user_name_default">这里是用户名</string>
    
    <!-- 各种dialog -->
    <string name="dialog_close_app_title">退出程序</string>
    <string name="dialog_close_app_text">是否退出 teamkn？</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>

    <!-- 登录页面 -->
    <string name="login_email">邮箱</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_email_valid_blank">请输入邮箱</string>
    <string name="login_password_valid_blank">请输入密码</string>
    <string name="login_auth_fail">用户邮箱或密码错误</string>
    <string name="login_now_login">正在登录…</string>

    <!-- 登录成功后的主页面 -->
    <string name="base_main_show_note_list">笔记列表</string>
    <string name="new_text">新建文本</string>
    <string name="from_album">从相册</string>
    <string name="from_camera">拍照</string>
    <string name="manual_syn_bn">同步</string>
    <string name="menu_about">关于…</string>
    <string name="start_search">搜索</string>
    <string name="menu_account_management">账号管理</string>
    <string name="menu_setting">设置</string>
    <string name="to_chat_list">对话串</string>
    
    <!-- 对话串列表页面 -->
    <string name="new_chat">新建对话串</string>
    
    <!-- 对话列表页面 -->
    <string name="chat_title">对话串</string>
    
    <!-- 选择对话串成员页面 -->
    <string name="select_chat_member_title">创建对话串</string>

    <!-- 搜索页面 -->
    <string name="search_prompt">请输入要搜索的关键字</string>


    <!-- 新建文本页面 -->
    <string name="note_content_et">文本内容</string>
    <string name="note_content_valid_blank">主题内容不能为空</string>
    <string name="note_image_valid_blank">图片不存在</string>
    <string name="save_note_bn">保存</string>
    <string name="saving">正在保存..</string>

    <string name="is_wifi_active_msg">无法连接到网络，请检查网络配置</string>
    <!-- 显示照片页面 -->
    <string name="show_capture_image_back">返回</string>
    <!-- 选择收集册页面 -->
    <string name="send_tsina">发送到新浪微博</string>
    <string name="submit_bn">确定</string>
    <string name="cancel_bn">取消</string>
    <string name="new_collection">新建收集册</string>
    <!-- 收集册主题列表页面 -->
    <string name="menu_delete_collection">删除</string>
    <string name="menu_change_collection_name">改名</string>
    <!-- 账号管理 -->
    <string name="account_manager_title">账号管理</string>
    <string name="account_edit_button">编辑</string>
    <string name="account_edit_button_close">完成</string>
    <string name="account_delete_button">删除</string>
    <!-- 联系人页面 -->
    <string name="contact_page_header">联系人</string>
    <string name="to_search_contact_page">搜索</string>
    <!-- 搜索联系人页面 -->
    <string name="search_contact_page_header">搜索联系人</string>
    <string name="search_contact">搜索</string>
    
    <string name="is_no_data">该列表已经被原作者删除</string>
    <string name="show_create_helop_msg">点击这里创建一个新列表</string>
    <string name="sea_onther_data_list">点击查看其它用户分享给所有人的列表</string>
    <string name="show_next_help">点击这里查看下一步骤</string>
    <string name="show_step_help">教你玩转 TEAMKN</string>
    <string name="show_collection_help">教你玩转 TEAMKN  show_collection_help</string>
    
    
    <string name="save_succeed_show">保存成功</string>
    <!-- view.getTag(key,value) 中的 key -->
    <!-- 笔记列表项的 tag key -->
    <item type="id" name="tag_note_uuid"></item>
    <item type="id" name="tag_note_kind"></item>
    
    <!-- pinyin4j -->
    <string name="unchecked">unchecked</string>
    <!-- TeamknPreferences 的 keys -->
    <string name="preferences_key_upload_photo_quality">upload_photo_quality</string>
    <string name="preferences_key_current_user_id">current_user_id</string>
    <string name="preferences_key_syn_contact_timestamp">syn_contact_timestamp</string>
    <string name="preferences_key_last_syn_server_meta_updated_time">last_syn_server_meta_updated_time</string>
    <string name="preferences_key_last_syn_success_server_time">last_syn_success_server_time</string>
    <string name="preferences_key_last_syn_success_client_time">last_syn_success_client_time</string>
    <string name="preferences_key_last_syn_fail_client_time">last_syn_fail_client_time</string>
    <string name="preferences_key_last_syn_chat_updated_time">last_syn_chat_updated_time</string>
    <string name="preferences_key_last_syn_chat_node_created_time">last_syn_chat_node_created_time</string>
</resources>
