<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/head_bar"
            android:id="@+id/head"
            >
        <TextView
	           style="@style/head_bar_text_center"
	           android:text="@string/tkndata_list_create_title"
        />

        <Button
             android:id="@+id/data_list_save_bn"
             android:text="@string/save_note_bn"
             style="@style/head_bar_button_right"
             android:background="@drawable/tkn_top_bar_text_btn_selector"
        />

    </RelativeLayout>
    <TableRow
        android:layout_below="@+id/head"
        android:id="@+id/radio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
		 <RadioGroup
		     android:layout_width="fill_parent"
		     android:layout_height="wrap_content"    
		     android:orientation="horizontal" >
			 <RadioButton    
			    android:id="@+id/radiobutton_COLLECTION"
			    android:layout_width="wrap_content"    
			    android:layout_height="wrap_content"
			    android:checked="true"
			    android:text="@string/tkndata_list_create_collection_list" /> 
			 <RadioButton    
			    android:id="@+id/radiobutton_STEP"
			    android:layout_marginLeft="40dp"
			    android:layout_width="wrap_content"    
			    android:layout_height="wrap_content"
			    android:text="@string/tkndata_list_create_step_list" />
		 </RadioGroup>
    </TableRow>
    <TableRow
        android:layout_below="@+id/radio"
        android:id="@+id/checkbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <CheckBox
	          android:layout_gravity="center"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/tkndata_list_create_share"
	          android:id="@+id/data_list_public_checkbox"
         />
    </TableRow>
    
    <EditText
        android:layout_marginTop="10dp"
        android:layout_below="@+id/checkbox"
        android:id="@+id/create_data_list_et"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" 
    />
    <RelativeLayout 
        android:layout_below="@+id/create_data_list_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/create_data_list_msg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tkndata_list_create_title_hint" 
            android:layout_marginRight="20dp"
        />

    </RelativeLayout>
</RelativeLayout>