<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="360dp"
    android:background="@drawable/version_check_dialog_bg"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" 
>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dip"
        android:paddingTop="10dip"
    >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/version_check_dialog_title_msg" 
        />

    </RelativeLayout>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:text="@string/version_check_dialog_title"
        android:textColor="#000000"
        android:textSize="25sp" 
    />

    <TextView
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/line" 
    />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="0.66"
        android:gravity="center_horizontal"
        android:paddingBottom="10dip"
        android:paddingTop="10dip" 
        android:paddingLeft="50dp"
        android:orientation="vertical"
    >

        <TextView
            android:id="@+id/version_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/version_check_dialog_new_version"
            android:textColor="#000000" 
         />

        <TextView
            android:id="@+id/add_function_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/version_check_dialog_new_function"
            android:textColor="#000000" 
        />

        <TextView
            android:id="@+id/app_big_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/version_check_dialog_new_apk_big"
            android:textColor="#000000" 
        />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="20dip"
        android:paddingTop="10dip" 
    >

        <Button
            android:id="@+id/dialog_button_ok"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/version_check_dialog_download" 
        />

        <Button
            android:id="@+id/dialog_button_cancel"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dip"
            android:layout_toRightOf="@+id/dialog_button_ok"
            android:text="@string/version_check_dialog_cancel" 
        />
    </RelativeLayout>

</LinearLayout> 