<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/body"
        >

    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/head_bar"
            >
        <ImageView
            android:id="@+id/iv_foot_view"
            android:src="@drawable/sliding_menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/app_name"
        />
        <TextView
                style="@style/head_bar_text_center"
                android:text="@string/account_manager_title"
                />
        <Button
                android:text="@string/account_edit_button"
                style="@style/head_bar_button_right"
                android:onClick="on_edit_account_button_click"
                />
    </RelativeLayout>


    <ListView
            android:id="@+id/account_list"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            />
</LinearLayout>
