<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/head_bar"
        android:id="@+id/head_bar"
    >
        <ImageView
            android:id="@+id/iv_foot_view"
            android:src="@drawable/sliding_menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/app_name"
        />
        <TextView
            style="@style/head_bar_text_center"
            android:text="@string/chat_title"
        />
    </RelativeLayout>
    
    
    <ListView
        android:id="@+id/chat_list_lv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head_bar"
        android:layout_above="@+id/new_chat_bn"
    />
    
    <Button
        android:id="@+id/new_chat_bn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="click_new_chat_bn"
        android:text="@string/new_chat"
    />
</RelativeLayout>