<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/body"
>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/head_bar"
    >
        <Button
            style="@style/head_bar_button_go_back"
        />
        <TextView
            style="@style/head_bar_text_center"
            android:text="@string/contact_page_header"
        />
    </RelativeLayout>
  
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:padding="5dp"
    >
        <Button
            android:layout_width="77dp"
            android:layout_height="44dp"
            android:paddingRight="1dp"
            android:text="@string/placeholder"
        />
        <Button
            android:layout_width="77dp"
            android:layout_height="44dp"
            android:paddingRight="1dp"
            android:text="@string/placeholder"
        />
        <Button
            android:layout_width="77dp"
            android:layout_height="44dp"
            android:paddingRight="1dp"
            android:text="@string/placeholder"
        />
        <Button
            android:id="@+id/to_search_contact_page"
            android:layout_width="77dp"
            android:layout_height="44dp"
            android:text="@string/to_search_contact_page"
            android:onClick="click_to_search_contact_page"
        />
    </LinearLayout>
</LinearLayout>