<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/head_bar"
        android:id="@+id/head_bar"
        android:layout_marginBottom="5dp"
    >
        <TextView
            android:id="@+id/main_user_name"
            style="@style/head_bar_text_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:shadowColor="#99000000"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="1"
            android:text="@string/search_title"
            android:textColor="@color/white"
            android:textSize="20dp" 
        />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/search_box_rl"
        android:layout_below="@+id/head_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">  
	     <EditText android:id="@+id/search_box"
	       android:layout_height="40dp"
	       android:layout_width="250dp"
	       android:hint="@string/search_prompt"
	    />
	    <ImageButton
          android:id="@+id/search_submit"
          android:layout_height="40dp"
          android:layout_width="wrap_content"
          android:layout_alignParentRight="true"
          android:src="@android:drawable/ic_search_category_default" 
          android:contentDescription="@string/image_description"
          android:onClick="click_search_submit"
	    /> 
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/search_condition" 
        android:layout_below="@+id/search_box_rl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
    >
        <Button 
            android:layout_marginRight="-4dp"
            android:id="@+id/search_list_btn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/search_list"
            android:onClick="click_search_list"
        />
        <Button
            android:layout_marginLeft="-4dp"
            android:id="@+id/search_user_btn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/search_user" 
            android:onClick="click_search_user"
        />
    </LinearLayout>
    <!-- <ScrollView 
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:id="@+id/horizontal_wrapper"
       android:layout_below="@+id/search_condition"
    >
        <LinearLayout 
            android:id="@+id/search_history"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
        />
    </ScrollView> -->
    <ListView 
        android:id="@+id/search_history"
        android:layout_below="@+id/search_condition"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="#00000000"
    >
    </ListView>
    <ListView 
        android:id="@+id/search_result_list"
        android:layout_below="@+id/search_history"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="#00000000"
    />
    <LinearLayout
        android:id="@+id/list_no_data_show"
        android:layout_below="@+id/search_history"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center" 
        android:orientation="vertical"
        android:visibility="gone"
    >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gray_android_bg"
            android:contentDescription="@string/image_description"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_no_data" 
        />
   </LinearLayout>
</RelativeLayout>