<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >
       
    <RelativeLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    style="@style/head_bar"
    >
        
        <TextView
            android:id="@+id/user_name_tv"
            style="@style/head_bar_text_center"
            android:text="@string/search_friendly"
        />
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/relativelayout_set_user_avatar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:gravity="center_vertical"
            android:padding="10dp" >
    
	       <EditText android:id="@+id/search_box"
		          android:layout_height="40dp"
		          android:layout_width="230dp"
		          android:hint="@string/search_prompt"
	       />
	       <ImageButton
		         android:id="@+id/search_submit"
		         android:layout_height="40dp"
		         android:layout_width="wrap_content"
		         android:layout_alignParentRight="true"
		         android:onClick="click_search_ib"
		         android:contentDescription="@string/image_description"
		         android:src="@android:drawable/ic_search_category_default" 
	       /> 
  </RelativeLayout>
  <ListView 
      android:id="@+id/list_view"
      android:divider="#00000000"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent">
  </ListView>
</LinearLayout>